kubernetes/apps/home-automation/birthday/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: home-automation
  name: birthday-backend-internal
spec:
  ingressClassName: internal
  rules:
  - host: birthday-api.tnorbert.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: birthday-backend
            port:
              number: 10040
